<resources>
    <string name="app_name">Rap Battle</string>
    <string name="profilePictureDescription">picture of the user</string>
    <string name="strWins">Siege:</string>
    <string name="strLooses">Niederlagen:</string>
    <string name="strEditProfile">Profil bearbeiten</string>
    <string name="editProfilePictureDescription">Preview of old profile picture</string>
    <string name="strSaveChangesDescription">Speichern</string>
    <string name="strChangeProfilePictureDescription">Profilbild ändern</string>
    <string name="strNewUsername">Benutzername</string>
    <string name="strNewLocation">Stadt</string>
    <string name="strNewAboutMe">Über mich</string>
    <string name="hint_mail">Email</string>
    <string name="title_activity_openforvotes">OpenforvotesActivity</string>
    <string name="trending_battles">Trending</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_trending">TrendingActivity</string>
    <string name="login_username">Benutzername</string>
    <string name="login_password_hint">Passwort</string>
    <string name="login_login">Login</string>
    <string name="login_new_account">Noch keinen Account? Klick hier.</string>
    <string name="reg_username_hint">Benutzername</string>
    <string name="reg_email_hint">Email</string>
    <string name="reg_password_hint">Passwort</string>
    <string name="reg_register">Registrieren</string>
    <string name="reg_confirm_password">Passwort bestätigen</string>
    <string name="reg_back_to_login">Schon registriert? Jetzt einloggen.</string>

    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
