<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrierung"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:paddingBottom="15dp"/>
    <!-- Space -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:background="@color/white"
        android:hint="@string/reg_username_hint"
        android:padding="10dp"
        android:singleLine="true" />

    <!-- Space -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:background="@color/white"
        android:hint="@string/reg_email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true" />


    <!-- Space -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:background="@color/white"
        android:hint="@string/reg_password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true" />

    <!-- Space -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPasswordConfirm"
        android:background="@color/white"
        android:hint="@string/reg_confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true" />

    <!-- Space -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bRegister"
        android:text="@string/reg_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/tvBackToLogin"
        android:text="@string/reg_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:padding="15dp"
        android:textColor="@color/white"
        />

</LinearLayout>
