<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.batllerap.hsosna.rapbattle16bars.EditProfileActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imgvEditProfilePicture"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/editProfilePictureDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strNewUsername"
        android:layout_below="@+id/imgvEditProfilePicture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/txtvEditUsername" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txteNewUsername"
        android:layout_below="@+id/txtvEditUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strNewLocation"
        android:id="@+id/txtvEditLocation"
        android:layout_below="@+id/txteNewUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txteNewLocation"
        android:layout_below="@+id/txtvEditLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strNewAboutMe"
        android:id="@+id/txtvEditAboutMe"
        android:layout_below="@+id/txteNewLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txteNewAboutMe"
        android:layout_below="@+id/txtvEditAboutMe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSaveChangesDescription"
        android:id="@+id/btnSaveChanges"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:textColor="#ffff"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strChangeProfilePictureDescription"
        android:id="@+id/btnChangeProfilePicture"
        android:layout_alignBottom="@+id/imgvEditProfilePicture"
        android:layout_alignLeft="@+id/btnSaveChanges"
        android:layout_alignStart="@+id/btnSaveChanges"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:background="?attr/colorPrimary"
        android:textColor="#ffff"
        android:layout_marginBottom="27dp" />

</RelativeLayout>
