<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.batllerap.hsosna.rapbattle16bars.ProfileActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgvProfilePicture"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/default_profile_pic"
        android:contentDescription="@string/profilePictureDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvUsername"
        android:text="New Text"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/txtvLocation"
        android:layout_alignStart="@+id/txtvLocation"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvLocation"
        android:layout_below="@+id/txtvUsername"
        android:layout_alignLeft="@+id/txtvAboutMe"
        android:layout_alignStart="@+id/txtvAboutMe"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvAboutMe"
        android:layout_below="@+id/txtvLocation"
        android:layout_toRightOf="@+id/imgvProfilePicture"
        android:layout_toEndOf="@+id/imgvProfilePicture"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strWins"
        android:id="@+id/txtvWins"
        android:layout_below="@+id/imgvProfilePicture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLooses"
        android:id="@+id/txtvLooses"
        android:layout_alignTop="@+id/txtvWins"
        android:layout_alignRight="@+id/txtvAboutMe"
        android:layout_alignEnd="@+id/txtvAboutMe" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txtvWinsValue"
        android:layout_below="@+id/txtvWins"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txtvLoosesValue"
        android:layout_below="@+id/txtvLooses"
        android:layout_alignLeft="@+id/txtvLooses"
        android:layout_alignStart="@+id/txtvLooses" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEditProfile"
        android:id="@+id/btnEditProfile"
        android:textSize="10sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/txtvWins"
        android:layout_alignRight="@+id/imgvProfilePicture"
        android:layout_alignEnd="@+id/imgvProfilePicture" />

    <TextView
        android:textSize="16sp"
        android:id="@+id/trending_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Trending"
        android:layout_below="@+id/txtvWinsValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/trendingList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trending_text"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/trending_text">


    </android.support.v7.widget.RecyclerView>

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/trendingList"
        android:layout_centerHorizontal="true" />


    <TextView
        android:textSize="16sp"
        android:id="@+id/open_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Offene Battles"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/openList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/open_text"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/open_text">


    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
